--- a/tech.css
+++ b/tech.css
@@ -48,12 +48,15 @@
 .tech-icon {
     width: 50px;
     height: 50px;
+    margin-top:40px;
+    transition: margin 0.3s ease;
 }
 
 .tech-name {
     font-size: 14px;
-    font-weight: bold;
-    margin-top: 5px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    visibility: hidden;
 }
 
 .tech-overlay {
@@ -62,8 +65,20 @@
     font-size: 12px;
     opacity: 0;
     transition: opacity 0.3s ease;
+    visibility: hidden;
 }
 
-.tech-card:hover .tech-overlay {
+.tech-card:hover .tech-icon{
+    margin:0;
+}
+
+.tech-card:hover .tech-name{
     opacity: 1;
+    visibility: visible;
+}
+
+
+.tech-card:hover .tech-overlay{
+    opacity: 1;
+    visibility: visible;
 }
