--- a/header-video.css
+++ b/header-video.css
@@ -7,6 +7,11 @@ header {
     justify-content: center;
     flex-direction: column;
   }
+
+  .header-title-logo{
+    width: 100px;
+    height: 100px;
+  } 
   .scroll-down-arrow {
     margin-top: 1.5rem;
     animation: bounceDown 1.8s infinite;
@@ -169,6 +174,7 @@ header {
     height: 0;
     opacity: 0;
     pointer-events: none;
+    z-index: 1;
   }
   
   .video-circle {
